<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.sikeller.aqs</groupId>
    <artifactId>aqs-simulation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>aqs-model</module>
        <module>aqs-simulation-app</module>
        <module>aqs-taxi-algorithm</module>
        <module>aqs-visualization</module>
        <module>aqs-simulation-core</module>
        <module>aqs-p2p</module>
    </modules>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <project.artifactId>aqs-simulation</project.artifactId>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.sikeller.aqs</groupId>
                <artifactId>aqs-model</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>de.sikeller.aqs</groupId>
                <artifactId>aqs-taxi-algorithm</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>de.sikeller.aqs</groupId>
                <artifactId>aqs-simulation-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>de.sikeller.aqs</groupId>
                <artifactId>aqs-visualization</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>de.sikeller.aqs</groupId>
                <artifactId>aqs-p2p</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>2.0.13</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
    </dependencies>

</project>
